--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mentor_mind">
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
    <application
         android:label="Mentor Mind"
         android:name="${applicationName}"
@@ -30,5 +32,16 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+           
+
     </application>
+     <queries>
+  <!-- If your app checks for SMS support -->
+
+  <!-- If your app checks for call support -->
+  <intent>
+    <action android:name="android.intent.action.VIEW" />
+    <data android:scheme="tel" />
+  </intent>
+</queries>
 </manifest>
