--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,17 +28,26 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audioplayers: ^3.0.1
   cloud_firestore: ^4.3.1
   cupertino_icons: ^1.0.2
   dropdown_search: ^5.0.5
+  emoji_selector: ^0.0.5
   firebase_auth: ^4.2.5
   firebase_core: ^2.4.1
+  firebase_storage: ^11.0.14
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.0+1
+  flutter_sound: ^9.2.13
+  flutter_svg: ^2.0.1
+  font_awesome_flutter: ^10.4.0
+  google_fonts: ^4.0.3
   liquid_pull_to_refresh: ^3.0.1
   loading_animation_widget: ^1.2.0+4
   lottie: ^2.2.0
+  permission_handler: ^10.2.0
+  provider: ^6.0.5
+  url_launcher: ^6.1.9
   uuid: ^3.0.7
   wiredash: ^1.5.0
 
@@ -58,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
